generic backbone with comments about what should be where and how

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,10 @@
 <h1>Listing books</h1>
-
+<div
+  class="fb-like"
+  data-send="true"
+  data-width="450"
+  data-show-faces="true">
+</div>
 <table>
   <thead>
     <tr>
