added login button to a start page

--- a/app/views/start/search.html.erb
+++ b/app/views/start/search.html.erb
@@ -1,4 +1,11 @@
 <h1>Start#search</h1>
+
+<div class="login-span">
+	<%= render("login") %>
+</div>
+
+
+
 <p>Find me in app/views/start/search.html.erb</p>
 
 <h2>search field here </h2>
