--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,10 +1,10 @@
 <h1>Listing books</h1>
-<div
+<!-- <div
   class="fb-like"
   data-send="true"
   data-width="450"
   data-show-faces="true">
-</div>
+</div> -->
 <table>
   <thead>
     <tr>
