clean the codes

--- a/app/views/books/_bookdetail.html.erb
+++ b/app/views/books/_bookdetail.html.erb
@@ -1,7 +1,11 @@
-<h1>my test</h1>
+<h1>Information from Google and Search list from Amazon</h1>
 
 <% @data.each_pair do |key, value| %>
   <p>Key: <%= key %> Value: <%= value %></p>
 
+
 <% end %>
-<%= link_to 'Buy','http://www.amazon.com/s/ref=nb_sb_ss_c_0_4?url=search-alias%3Dstripbooks&field-keywords=Do+Androids+Dream+of+Electric+Sheep'%>
+<%= image_tag @data['image_link'] %>
+
+
+<%= link_to 'Buy on Amazon','http://www.amazon.com/s/ref=nb_sb_ss_c_0_4?url=search-alias%3Dstripbooks&field-keywords=Do+Androids+Dream+of+Electric+Sheep'%>
