--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -36,6 +36,6 @@
   </div>
 <% end %>
 
-<%= image_tag @book.imageLink %>
-<%= link_to 'Relative searching on Amazon',@book.amazonLink%>
+<%#= image_tag @book.imageLink %>
+<%#= link_to 'Relative searching on Amazon',@book.amazonLink%>
 
