--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -18,8 +18,8 @@
       <tr>
         <td><%= friendship.user_id %></td>
         <td><%= friendship.friend_id %></td>
-        <td><%= friendship.create %></td>
-        <td><%= friendship.destroy %></td>
+        <td><%#= friendship.create %></td>
+        <td><%#= friendship.destroy %></td>
         <td><%= link_to 'Show', friendship %></td>
         <td><%= link_to 'Edit', edit_friendship_path(friendship) %></td>
         <td><%= link_to 'Destroy', friendship, method: :delete, data: { confirm: 'Are you sure?' } %></td>
