Facebook show finish

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,11 @@
 		<div class="ot">
 			<%= yield %>
 		</div>
-		<div id="book_footer">
-		Copyright © Semantic Web Development
-		</div>
 		
+		<div id="book_footer">
+			Copyright © Semantic Web Development
+		</div>
+		<div class="overlay">
+		</div>
 	</body>
 </html>
