--- a/app/assets/stylesheets/start.css.scss
+++ b/app/assets/stylesheets/start.css.scss
@@ -10,10 +10,14 @@ $default-text-shadow-v-offset: 1px;
 
 //This is for all
 body {
+
   background-image:url('background.jpg');
   @include background-size(cover);
 
 }
+
+
+
 .ot {
   width: 1000px;
   height: 100%;
@@ -146,17 +150,95 @@ $cover_top:10px;
 #facebookinfo{
   position:absolute;
   display: none;
-  top: 50px;
-  right:230px;
-  width: 500px;
+  top: 90px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 420px;
   height: 500px;
+  //border: 1px solid #FF0000;
+  background: #FFFFFF;
+  z-index: 10;
+  @include border-radius(10px);
+}
+#FBtitle{
+  text-align: left;
+  padding-left:10px;
+  width: 420px;
+  height: 50px;
+  vertical-align: middle;
+  line-height: 50px;
+  font-weight:bolder;
+  font-size: 1em;
+  background: #F5F5F5;
+  @include border-radius(4px, 4px);
+
+}
+#friendlist{
+  //display: none;
+
+  top: 50px;
+  right:0px;
+  width: 420px;
+  height: 400px;
+  //border: 1px solid #FF0000;
+  background: #FFFFFF;
+  @include border-radius(10px);
   overflow-y: scroll;
-  border: 1px solid #FF66FF;
-  background: #000000;
-  @include border-radius(30px);
+  
+  .friendimage{
+    display: inline-block;
+    position:relative;
+    //left:-180px;
+    width: 90px;
+    height: 90px;
+    @include border-radius(10px);
+    //border: 1px solid #00FF00;
+    background:#000000;
+    .face{
+      width: 80px;
+      height: 80px;
+    }
+  }
+  .friendname{
+    display: inline-block;
+    position:relative;
+    width: 310px;
+    height: 50px;
+    top:10px;
+    text-align: left;
+    font-size:1.3em;
+    //border: 1px solid #66DD00;
+  }
+}
+.tablestyle{
+  margin-left:0px;
+}
+.FBbody{
+  display: inline-block;
 }
 #FBclose{
   position:absolute;
   bottom:10px;
   right:30px;
+}
+table{
+  border: 0px solid #000000;
+  align: left;
+}
+tr{  
+   padding:3px 5px 3px 5px;//內文不會貼格子
+} 
+td{  
+   padding:3px 5px 3px 5px;//內文不會貼格子
+   border-bottom: 1px solid #DDDDDD;
+} 
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display:none;
+  height: 100%;
+  width: 100%;
+  //z-index: 9;
+  background-color: rgba(0,0,0,0.5);
 }
