layout-design update

--- a/app/views/start/search.html.erb
+++ b/app/views/start/search.html.erb
@@ -1,5 +1,7 @@
 <div class="first_wrapper">
   <h1 class='has-custom-shadow'>Start#search</h1>
+  <%= puts "=========-----====-----====-----====-----====-----====-----" %>
+  <%= puts $uid %>
   <% if $uid %>
     <div>
       <%= form_for :search do |f| %>
