--- a/app/views/start/show_book.html.erb
+++ b/app/views/start/show_book.html.erb
@@ -1,4 +1,8 @@
 <div class="second_wrapper">
+  <div>
+      <%= link_to image_tag("returnicon.png",:class =>"returnstyle"),start_search_path %>
+
+  </div>
   <div class="book_cover" >
     <%= image_tag @book_info.fetch("google").fetch("image_link"), :class =>"imagestyle" %>
   </div>
@@ -24,15 +28,18 @@
           <img u="image" class="outside" src=<%=asset_path "Amazon.png"%> />
         </a>
       </span>
-      <span id="facebook">
-        <img u="image" class="outside" src=<%=asset_path "Facebook.png"%> />
-      </span>
     </div>
   </div>
 
   <div id="facebookinfo">
-    <div id="FBtitle">Friends who like it</div>
+    <div id="FBtitle">
+      
+      <img u="image" class="fbicon" src=<%=asset_path "Facebook.png"%> />
+      Friends who like it 
+    </div>
+    
     <div id="friendlist">
+      
       <table class="tablestyle">
         <% if @book_info["friendlist"].size > 0 %>
           <% @book_info["friendlist"].each do |id| %>
@@ -44,14 +51,16 @@
           <% else %>
            <p>Be the first one! </p>
           <% end %>
-      </table>   
+      </table>
+
+
     </div>
-    <div id="FBclose" class="btn btn-default btn-raised">Close</div>
   </div>
   
 
   <script>
     $('.book_cover').addClass('animated bounceInLeft');
+    $('#facebookinfo').show().addClass('animated bounceInUp');
     $('.book_info').show().addClass('animated bounceInRight');
     setTimeout(function () {
         $('.content').show().addClass('animated fadeIn');
@@ -65,14 +74,7 @@
           $(this).removeClass('animated bounce'); 
         }       
     );
-    $('#facebook').click(function() {
-        $('.overlay').show();
-        $('#facebookinfo').show().removeClass('animated bounceOutUp').addClass('animated bounceInDown');
-    });
-    $('#FBclose').click(function() {
-        $('#facebookinfo').removeClass('animated bounceInDown').addClass('animated bounceOutUp');
-        $('.overlay').hide();
-    });
+   
   </script>
 </div>
 
