--- a/app/views/start/show_book.html.erb
+++ b/app/views/start/show_book.html.erb
@@ -1,6 +1,6 @@
 <div class="content">
 <table>
-  <td widht=40%>
+  <td widht="40%">
     <div class="book_cover" >
       <%= image_tag @book_info["google"]["image_link"], :class =>"imagestyle" %>
     </div>
