--- a/app/views/start/_login.html.erb
+++ b/app/views/start/_login.html.erb
@@ -10,7 +10,7 @@
     // for FB.getLoginStatus().
     if (response.status === 'connected') {
       // Logged into your app and Facebook.
-      testAPI();
+      //testAPI();
 
       var uid = response.authResponse.userID;
       var accessToken = response.authResponse.accessToken;
@@ -20,7 +20,11 @@
          data:(
            'uid=' + uid + '&' + 'token=' + accessToken
          )
-      })
+      }).done(function(){
+        //alert("call done")
+        window.location.replace("http://localhost:3000/start/search");
+      });
+
     } else if (response.status === 'not_authorized') {
       // The person is logged into Facebook, but not your app.
       document.getElementById('status').innerHTML = 'Please log ' +
@@ -31,6 +35,8 @@
       document.getElementById('status').innerHTML = 'Please log ' +
         'into Facebook.';
     }
+
+    
   }
 
   // This function is called when someone finishes with the Login
