--- a/app/views/start/search.html.erb
+++ b/app/views/start/search.html.erb
@@ -10,8 +10,10 @@
       <% end %>
     </div>
   <% else %>
-    <div class="login-span">
-      <%= render("login") %>
-    </div>
+    <% if !$uid %>
+      <div class="login-span">
+        <%= render("login") %>
+      </div>
+    <% end %>
   <% end %>
 </div>
